--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -50,6 +50,7 @@
                     HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Padding="5,2,5,2" />
             <Button x:Name="BtnShowAllLocation" Content="Alle Standorte anzeigen" Click="ShowAllLocation"
                     HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Padding="5,2,5,2" />
+            <CheckBox x:Name="ChbLinq" Content="LINQ" VerticalAlignment="Top" Margin="10,10,0,0" IsChecked="{Binding IsLinq}" />
         </WrapPanel>
         
     </Grid>
